Fix page links in dark mode

--- a/assets/styles/common/purpose.scss
+++ b/assets/styles/common/purpose.scss
@@ -201,9 +201,16 @@
     text-decoration: none;
 
     .content-purpose-content {
+
       .title {
         font-size: 1.3em;
-        color: var(--color-body-color);
+        @media (prefers-color-scheme: light) {
+          color: var(--color-body-color);
+        }
+
+        @media (prefers-color-scheme: dark) {
+          color: var(white);
+        }
       }
 
       i {
